# melt

./: .gitignore  cerro_micho.txt  configure.ac  cor.agr  cor_q.agr  fa.agr  fo.agr  kal.agr  q.agr  q_hip.agr  sm.agr  w.agr  wo.agr
src/: .gitignore  D1.cc  D1.hh  D2.cc  D2.hh  Gf.cc  Makefile.am  Makefile.in  Melt.cc  Melt_Model.cc  Melt_Model.hh  Melt_Model__Gf.cc  Melt_Model__Gfm.cc  Melt_Model__Gfmelt.cc  Melt_Model__calculate_extent_.cc  Melt_Model__compute_current_melt_composition_.cc  Melt_Model__compute_current_solid_composition_.cc  Melt_Model__compute_melt_endmember_composition_.cc  Melt_Model__construct_reaction_.cc  Melt_Model__dGf.cc  Melt_Model__dGfm.cc  Melt_Model__minimize_Gf.cc  Melt_Model__minimize_trial_set_.cc  Melt_Model__print.cc  Melt_Model__update_current_state.cc  Melt_Model__update_solid_state_.cc  Model.cc  Model.hh  Phase.hh  State.cc  State.hh  State_Base.cc  State_Base.hh  State__do_ladder_update.cc  State__initialize_globals.cc  State__melt.cc  State__update.cc  algorithm.hh  bm_melt.cc  bm_melt.hh  (+51 more)
